--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,21 +1,20 @@
-
-
-body{
+body {
   background: #F1F2F4;
 }
 
-input[type=checkbox] + label {
+// -------- inputn classic
+input[type=checkbox].tgl-classic+label {
   display: block;
   margin: 0.2em;
   cursor: pointer;
   padding: 0.2em;
 }
 
-input[type=checkbox] {
+input[type=checkbox].tgl-classic {
   display: none;
 }
 
-input[type=checkbox] + label:before {
+input[type=checkbox].tgl-classic+label:before {
   content: "\e901";
   display: inline-block;
   font-family: icoMoon;
@@ -35,25 +34,29 @@ input[type=checkbox] + label:before {
   line-height: 13px;
 }
 
-input[type=checkbox] + label:active:before {
+input[type=checkbox].tgl-classic+label:active:before {
   transform: scale(0);
 }
-input[type=checkbox]:hover + label:before {
+
+input[type=checkbox].tgl-classic:hover+label:before {
   border-color: #3C7EEA;
 }
-input[type=checkbox]:checked + label:before {
+
+input[type=checkbox].tgl-classic:checked+label:before {
   background: #3C7EEA;
   border-color: #3C7EEA;
   color: #fff;
 }
 
-input[type=checkbox]:disabled + label{
+input[type=checkbox].tgl-classic:disabled+label {
   position: relative;
+
   &:before {
     transform: scale(1);
     border-color: #DFE2E7;
     background: #DFE2E7;
   }
+
   &:after {
     position: absolute;
     top: 50%;
@@ -66,8 +69,186 @@ input[type=checkbox]:disabled + label{
   }
 }
 
-input[type=checkbox]:checked:disabled + label:before {
+input[type=checkbox].tgl-classic:checked:disabled+label:before {
   transform: scale(1);
   background-color: #bfb;
   border-color: #bfb;
+}
+
+//  ------------- input swich -------
+
+.tgl {
+  display: none;
+
+  // add default box-sizing for this scope
+  &,
+  &:after,
+  &:before,
+  & *,
+  & *:after,
+  & *:before,
+  &+.tgl-btn {
+    box-sizing: border-box;
+
+    &::selection {
+      background: none;
+    }
+  }
+
+  +.tgl-btn {
+    outline: 0;
+    display: block;
+    width: 34px;
+    height: 20px;
+    position: relative;
+    cursor: pointer;
+    user-select: none;
+
+    &:after,
+    &:before {
+      position: relative;
+      display: block;
+      content: "";
+      width: 50%;
+      height: 100%;
+    }
+
+    &:after {
+      left: 0;
+    }
+
+    &:before {
+      display: none;
+    }
+  }
+
+  &:checked+.tgl-btn:after {
+    left: 50%;
+  }
+}
+
+.tgl-swp {
+  +.tgl-btn {
+    background: #AAB2C0;
+    border-radius: 2em;
+    padding: 2px;
+    transition: all .4s ease;
+    border: 1px solid #e8eae9;
+
+    &:after {
+      border-radius: 2em;
+      background: #fbfbfb;
+      transition:
+        left .3s cubic-bezier(0.175, 0.885, 0.320, 1.275),
+        padding .3s ease, margin .3s ease;
+      box-shadow:
+        0 0 0 1px rgba(0, 0, 0, .1),
+        0 4px 0 rgba(0, 0, 0, .08);
+    }
+
+    &:hover:after {
+      will-change: padding;
+    }
+
+    &:active {
+      box-shadow: inset 0 0 0 2em #e8eae9;
+
+      &:after {
+        padding-right: .8em;
+      }
+    }
+  }
+
+  &:checked+.tgl-btn {
+    background: #3C7EEA;
+
+    &:active {
+      box-shadow: none;
+
+      &:after {
+        margin-left: -.8em;
+      }
+    }
+  }
+}
+
+// ---------------simple main button ------------
+
+.btn {
+  font-family: Source Sans Pro, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background: #3C7EEA;
+  box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
+  border-radius: 4px;
+  border: none;
+  // padding: 16px 10px;
+  padding: 16px 50px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  &:hover {
+    background: #5695FD;
+  }
+  &:active {
+    background: #1666EA;
+  }
+  &:disabled {
+    background: #C2CFE0;
+    cursor: default;
+  }
+
+}
+
+
+// ---------------simple secondary button ------------
+
+.btn-sec {
+  font-family: Source Sans Pro, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 1px;
+  font-variant: small-caps;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background: #fff;
+
+  box-shadow: none;
+  border-radius: 4px;
+  padding: 16px 50px;
+  cursor: pointer;
+  outline: none;
+  border: 1px solid #3C7EEA;
+  box-sizing: border-box;
+
+// letter-spacing: 0.01em;
+
+
+color: #3C7EEA;
+  &:hover {
+    border: 1px solid #5695FD;
+    color: #5695FD;
+  }
+  &:active {
+    border: 1px solid #1666EA;
+    color: #1666EA;
+  }
+  &:disabled {
+    border: 1px solid #C2CFE0;
+    color: #C2CFE0;
+    cursor: default;
+  }
 }
