--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/third-step-creation/third-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/third-step-creation/third-step-creation.component.scss
@@ -3,6 +3,12 @@ form {
   flex-direction: column;
   width: 66%;
 
+  .form-title {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+  }
+
   h3 {
     font-family: Source Sans Pro, sans-serif;
     font-style: normal;
@@ -10,6 +16,29 @@ form {
     font-size: 18px;
     line-height: 23px;
     color: #323c47;
+    margin: 0;
+  }
+
+  .pckg-swap {
+    display: flex;
+    min-width: 110px;
+    justify-content: space-between;
+
+    input[type=checkbox]:checked+label+span {
+      color: #3C7EEA;
+      font-weight: 600;
+    }
+
+    span {
+      // margin-left: 13px;
+      font-family: Source Sans Pro, sans-serif;
+
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 20px;
+      text-align: center;
+      color: #707683;
+    }
   }
 }
 
@@ -18,6 +47,7 @@ form {
   flex-direction: row;
   justify-content: space-between;
   margin-top: 35px;
+
   button {
     font-family: Source Sans Pro, sans-serif;
     border: none;
@@ -29,11 +59,13 @@ form {
     padding: 15px 24px;
     cursor: pointer;
     text-transform: uppercase;
+
     &:first-of-type {
       border: 1px solid #4285f4;
       background: #fff;
       color: #4285f4;
       box-shadow: none;
+
       &:hover {
         color: #fff;
         background: #3c7eea;
@@ -44,6 +76,7 @@ form {
     color: #fff;
     background: #3c7eea;
     box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
+
     &:hover {
       border: 1px solid #4285f4;
       background: #fff;
@@ -62,12 +95,54 @@ form {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+  position: relative;
+
+  .show-all-pack {
+    position: absolute;
+    right: 0;
+    background: rgba(255, 255, 255, 0.9);
+    border-radius: 0px 0px 5px 0px;
+    height: 100%;
+    width: 50%;
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    h4 {
+      font-family: Source Sans Pro, sans-serif;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 18px;
+      line-height: 23px;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      color: #323C47;
+    }
+
+    p {
+      font-family: Source Sans Pro, sans-serif;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 18px;
+      text-align: center;
+      color: #728096;
+      margin: 0;
+      padding: 0;
+      margin-bottom: 60px;
+    }
+  }
+
   .textarea {
     width: 90%;
     margin: auto;
     height: 90%;
     padding: 10px;
   }
+
   textarea {
     resize: none;
     padding: 0;
@@ -76,6 +151,7 @@ form {
     outline: none;
     width: 100%;
   }
+
   .input-wrap {
     padding: 10px;
     width: 80%;
@@ -84,6 +160,7 @@ form {
     display: flex;
     align-items: center;
     justify-content: center;
+
     input {
       width: 100%;
       font-family: Source Sans Pro, sans-serif;
@@ -97,8 +174,10 @@ form {
       outline: none;
     }
   }
+
   .select-wrap {
     padding: 0 20px 0 30px;
+
     .mat-select {
       height: 60px;
       display: flex;
@@ -106,27 +185,34 @@ form {
       justify-content: center;
     }
   }
-  & > div {
+
+  &>div {
     width: 100%;
   }
+
   .line {
     display: flex;
     flex-direction: row;
     border-bottom: 1px solid #dce0e6;
+
     .title {
       display: flex;
       align-items: center;
+
       p {
         padding-top: 0;
         padding-bottom: 0;
       }
     }
-    & > div {
+
+    &>div {
       width: 25%;
       border-right: 1px solid #dce0e6;
+
       &:last-of-type {
         border-right: none;
       }
+
       p {
         margin: 0;
         padding: 0;
@@ -142,24 +228,27 @@ form {
       }
     }
   }
+
   .package-name {
-    & > div {
+    &>div {
       background: #f4f7fc;
       background: #f4f7fc;
       min-height: 67px;
       border-right: 1px solid #dce0e6;
+
       &:last-of-type {
         border-right: none;
       }
+
       h6 {
-        font-family: Source Sans Pro;
+        font-family: Source Sans Pro, sans-serif;
         font-style: normal;
         font-weight: normal;
         text-transform: uppercase;
         font-size: 14px;
         line-height: 6px;
         letter-spacing: 0.15px;
-        font-feature-settings: "liga" off;
+        font-feature-settings: "liga"off;
         margin: 0;
         color: #323c47;
         padding: 30px 0 30px;
@@ -167,42 +256,51 @@ form {
       }
     }
   }
+
   .packages-titles {
-    & > div {
+    &>div {
       height: 60px;
       border-right: 1px solid #dce0e6;
     }
+
     .packages-title {
       .textarea {
         height: 80%;
       }
     }
   }
+
   .packages-description {
     display: flex;
     flex-direction: row;
     width: 100%;
-    & > div {
+
+    &>div {
       width: 25%;
       height: 275px;
       border-right: 1px solid #dce0e6;
+
       .description-title {
         background: #f4f7fc;
       }
+
       p {
         padding: 16px 10px 10px 20px;
       }
     }
   }
+
   .package-deadlines,
   .packages-changes {
-    & > div {
+    &>div {
       height: 60px;
     }
   }
+
   .package-options {
     .added-option {
       height: 60px;
+
       .checkbox-wrap {
         display: flex;
         justify-content: center;
@@ -219,6 +317,7 @@ form {
         font-size: 18px;
         margin-right: 16px;
       }
+
       .add {
         display: flex;
         flex-direction: row;
@@ -227,16 +326,27 @@ form {
         font-weight: 600;
         font-size: 14px;
         line-height: 18px;
-
         color: #3c7eea;
         cursor: pointer;
         position: relative;
+        outline: none;
+
+        &:hover {
+          color: #5695FD;
+        }
+
+        &:active {
+          color: #1666EA;
+        }
       }
     }
+
     .option-title {
       background: #f4f7fc;
+
       input {
         background: #f4f7fc;
+
         &::-webkit-input-placeholder {
           /* Chrome/Opera/Safari */
           font-size: 14px;
@@ -245,6 +355,7 @@ form {
 
           color: #99acb7;
         }
+
         &::-moz-placeholder {
           /* Firefox 19+ */
           font-size: 14px;
@@ -253,6 +364,7 @@ form {
 
           color: #99acb7;
         }
+
         &:-ms-input-placeholder {
           /* IE 10+ */
           font-size: 14px;
@@ -261,6 +373,7 @@ form {
 
           color: #99acb7;
         }
+
         &:-moz-placeholder {
           /* Firefox 18- */
           font-size: 14px;
@@ -274,10 +387,29 @@ form {
   }
 }
 
+// -----------delete option ------------------------
+.option-title {
+  position: relative;
+}
+
+.delete-pack {
+  position: absolute;
+  top: 6px;
+  right: 5px;
+  font-size: 16px;
+  color: #BFC5D1;
+  cursor: pointer;
+
+  &:hover {
+    color: red;
+  }
+}
+
 // -------------change deffault arrow --------------
 
 mat-select::ng-deep .mat-select-arrow-wrapper {
   position: relative;
+
   &:before {
     position: absolute;
     content: "";
@@ -287,7 +419,90 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
     top: -2px;
     left: -20px;
   }
+
   .mat-select-arrow {
     display: none;
+  }
+}
+
+
+// ------------- extra packages ------------------------------// 
+
+.extra-packages-wrap {
+  h4 {
+    font-family: Source Sans Pro, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 20px;
+    text-transform: lowercase;
+    color: #323C47;
+  }
+
+  .extra-packages {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 18px rgba(128, 152, 213, 0.17);
+    border-radius: 5px;
+
+    &>div {
+      padding: 0 18px 0 38px;
+
+      .select-wrap {
+        padding: 0 20px 0 30px;
+    
+        .mat-select {
+          height: 60px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+        }
+      }
+    }
+
+    span.options-name {
+      font-family: Source Sans Pro, sans-serif;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 19px;
+      text-align: center;
+      color: #323C47;
+      margin-left: 10px;
+    }
+
+    .time-option {
+      min-height: 73px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      .checkbox {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        label{
+          margin-top: 0;
+        }
+      }
+      .options {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        min-width: 310px;
+        &>div {
+          width: 95px;
+          height: 34px;
+        }
+        .select {
+          // width: 95px;
+          // height: 34px;
+          mat-select {
+            width: 95px;
+            height: 34px;
+          }
+        }
+      }
+    }
   }
 }
