--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.html
@@ -17,7 +17,7 @@
         <mat-form-field appearance="outline" ngbPopover="Это позволит покупателям быстро найти Вашу услугу."
           triggers="mouseenter:mouseleave" popoverTitle="Выберите категорию, наиболее подходящую для Вашей услуги"
           placement="right" popoverClass="popover-select" closeDelay="200">
-          <mat-select (ngModelChange)="onFiltersChange()"  formControlName="category" [(ngModel)]="userService.category"
+          <mat-select (ngModelChange)="onFiltersChange()" formControlName="category" [(ngModel)]="userService.category"
             required>
             <mat-option *ngFor="let category of categoryList" [value]="category.link">
               {{ category.name }}
@@ -45,22 +45,19 @@
     <div class="tags">
       <h5>Ключевые слова для поиска вашей услуги</h5>
 
-      <mat-form-field class="example-chip-list" appearance="outline"  ngbPopover="Это поможет заказчикам найти Вас во время поиска."
-      triggers="mouseenter:mouseleave" popoverTitle="Введите теги" placement="right" popoverClass="popover"
-      closeDelay="200">
-          <mat-chip-list #chipList aria-label="Fruit selection">
-            <mat-chip *ngFor="let tag of tags" [selectable]="selectable" color="silver"
-                     [removable]="removable" (removed)="remove(tag)">
-              {{tag.tag}}
-              <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-            </mat-chip>
-            <input
-                   [matChipInputFor]="chipList"
-                   [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                   [matChipInputAddOnBlur]="addOnBlur"
-                   (matChipInputTokenEnd)="add($event)">
-          </mat-chip-list>
-        </mat-form-field>
+      <mat-form-field class="example-chip-list" appearance="outline"
+        ngbPopover="Это поможет заказчикам найти Вас во время поиска." triggers="mouseenter:mouseleave"
+        popoverTitle="Введите теги" placement="right" popoverClass="popover" closeDelay="200">
+        <mat-chip-list #chipList aria-label="Fruit selection">
+          <mat-chip *ngFor="let tag of tags" [selectable]="selectable" color="silver" [removable]="removable"
+            (removed)="remove(tag)">
+            {{tag.tag}}
+            <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+          </mat-chip>
+          <input [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+            [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="add($event)">
+        </mat-chip-list>
+      </mat-form-field>
     </div>
 
     <div class="portfolio">
