--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-creation.component.scss
@@ -24,8 +24,8 @@ form {
     min-width: 110px;
     justify-content: space-between;
 
-    input[type=checkbox]:checked+label+span {
-      color: #3C7EEA;
+    input[type="checkbox"]:checked + label + span {
+      color: #3c7eea;
       font-weight: 600;
     }
 
@@ -119,7 +119,7 @@ form {
       text-align: center;
       margin: 0;
       padding: 0;
-      color: #323C47;
+      color: #323c47;
     }
 
     p {
@@ -183,10 +183,11 @@ form {
       display: flex;
       flex-direction: column;
       justify-content: center;
+      text-align: center;
     }
   }
 
-  &>div {
+  & > div {
     width: 100%;
   }
 
@@ -205,7 +206,7 @@ form {
       }
     }
 
-    &>div {
+    & > div {
       width: 25%;
       border-right: 1px solid #dce0e6;
 
@@ -230,7 +231,7 @@ form {
   }
 
   .package-name {
-    &>div {
+    & > div {
       background: #f4f7fc;
       background: #f4f7fc;
       min-height: 67px;
@@ -248,7 +249,7 @@ form {
         font-size: 14px;
         line-height: 6px;
         letter-spacing: 0.15px;
-        font-feature-settings: "liga"off;
+        font-feature-settings: "liga" off;
         margin: 0;
         color: #323c47;
         padding: 30px 0 30px;
@@ -258,7 +259,7 @@ form {
   }
 
   .packages-titles {
-    &>div {
+    & > div {
       height: 60px;
       border-right: 1px solid #dce0e6;
     }
@@ -275,7 +276,7 @@ form {
     flex-direction: row;
     width: 100%;
 
-    &>div {
+    & > div {
       width: 25%;
       height: 275px;
       border-right: 1px solid #dce0e6;
@@ -292,7 +293,7 @@ form {
 
   .package-deadlines,
   .packages-changes {
-    &>div {
+    & > div {
       height: 60px;
     }
   }
@@ -309,7 +310,6 @@ form {
     }
 
     .add-option {
-
       background: #f4f7fc;
       padding: 23px 20px 20px 20px;
 
@@ -332,11 +332,11 @@ form {
         outline: none;
 
         &:hover {
-          color: #5695FD;
+          color: #5695fd;
         }
 
         &:active {
-          color: #1666EA;
+          color: #1666ea;
         }
       }
     }
@@ -397,7 +397,7 @@ form {
   top: 6px;
   right: 5px;
   font-size: 16px;
-  color: #BFC5D1;
+  color: #bfc5d1;
   cursor: pointer;
 
   &:hover {
@@ -425,8 +425,7 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
   }
 }
 
-
-// ------------- extra packages ------------------------------// 
+// ------------- extra packages ------------------------------//
 
 .extra-packages-wrap {
   h4 {
@@ -436,22 +435,22 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
     font-size: 16px;
     line-height: 20px;
     text-transform: lowercase;
-    color: #323C47;
+    color: #323c47;
   }
 
   .extra-packages {
-    background: #FFFFFF;
+    background: #ffffff;
     box-shadow: 0px 6px 18px rgba(128, 152, 213, 0.17);
     border-radius: 5px;
 
-    &>div {
+    & > div > div {
       padding: 0 18px 0 38px;
 
-      .select-wrap {
-        padding: 0 20px 0 30px;
-    
+      .select-wrap-extra {
+        padding: 0 10px 0 10px;
+        height: 100%;
         .mat-select {
-          height: 60px;
+          height: 100%;
           display: flex;
           flex-direction: column;
           justify-content: center;
@@ -466,7 +465,7 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
       font-size: 16px;
       line-height: 19px;
       text-align: center;
-      color: #323C47;
+      color: #323c47;
       margin-left: 10px;
     }
 
@@ -476,32 +475,114 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
+      flex-wrap: wrap;
+      .option-wrap {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        min-height: 73px;
+      }
       .checkbox {
         display: flex;
         flex-direction: row;
         align-items: center;
-        label{
-          margin-top: 0;
+        label {
+          margin: 0;
+          margin-top: -2px;
+          padding: 0;
+
         }
       }
       .options {
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-between;
+        // justify-content: space-between;
         min-width: 310px;
-        &>div {
+        span {
+          font-family: Source Sans Pro, sans-serif;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 16px;
+          line-height: 20px;
+          color: #AAB2C0;
+        }
+        & > div {
           width: 95px;
           height: 34px;
-        }
-        .select {
-          // width: 95px;
-          // height: 34px;
-          mat-select {
-            width: 95px;
-            height: 34px;
+          border: 1px solid #dce0e6;
+          border-radius: 2px;
+          margin-left: 20px;
+          &.price {
+            margin-left: 42px;
+            padding: 7px 8px;
+            width: 80px;
+            height: 20px;
+
+            input {
+              width: 52%;
+              height: 100%;
+              margin: 0;
+              padding: 0;
+              outline: none;
+              border: none;
+              font-family: Source Sans Pro, sans-serif;
+              font-style: normal;
+              font-weight: normal;
+              font-size: 16px;
+              line-height: 21px;
+              color: #707683;
+
+            }
+            .money {
+              font-family: Source Sans Pro, sans-serif;
+              font-style: normal;
+              font-weight: normal;
+              font-size: 14px;
+              line-height: 21px;
+              color: #707683;
+              text-transform: uppercase;
+            }
           }
         }
+      }
+      .all-types{
+        width: 100%;
+          background: #F4F7FC;
+          overflow: hidden;
+        > div{
+          width: 100%;
+          background: #F4F7FC;
+          display: flex;
+          flex-direction: column;
+          & > div {
+            padding: 15px 0;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            input {
+              background: transparent;
+            }
+            .extraoption-title {
+              font-family: Source Sans Pro;
+              font-style: normal;
+              font-weight: normal;
+              font-size: 16px;
+              line-height: 20px;
+              text-align: center;
+              color: #323C47;
+              padding-left: 30px;
+            }
+            &:first-of-type {
+              margin-top: 27px;
+            }
+            &:last-of-type {
+              margin-bottom: 2px;
+            }
+          }
+        }
+
       }
     }
   }
