--- a/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
+++ b/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
@@ -18,6 +18,7 @@
   margin-right: 40px;
   .title{
     position: relative;
+    cursor: pointer;
     p{
      margin: 0;
      padding: 22px 20px;
