--- a/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
+++ b/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
@@ -73,6 +73,10 @@
       font-size: 16px;
       line-height: 20px;
       padding-bottom: 3px;
+      &:hover{
+        text-decoration: underline;
+        cursor: pointer;
+      }
     }
     &__about{
       max-height: 41px;
